--- a/salary-tranfer-demo/src/index.css
+++ b/salary-tranfer-demo/src/index.css
@@ -37,3 +37,11 @@ input {
   font-size: 12px;
   padding: 1px 2px;
 }
+
+
+.container {
+  margin: 0 auto;
+  max-width: 600px;
+  padding-top: 50px;
+  padding-bottom: 200px;
+}
